Vooral tekstuele wijzigingen 📚
Met een fijn kammetje door de tekst van de eerste week. Ik post hieronder ook maar even de nieuwe indelingen van OOP1, zodat we die ook gearchiveerd hebben.

wk1: inleiding, variabelen, operatoren, I/O (primitieven en objecten)
wk2: methoden, conditie, loops, strings, recursie
wk3: objecten maken (Point, DateTime, ...); import, namespaces
wk4: klassen maken, overerving (instantie-variabelen en zo) en visibility modifiers (doorklikken op code)
wk5: Collections: Arrays, ArrayList en HashMap, generics | multidimensionele arrays
wk6: exceptions en fileIO | zelf exception maken
wk7: interfaces / generics
wk8: studieweek
wk9: proeftoets / uitloop

OOP2
====
strategy pattern: functionele interfaces, lambda-expressie

hoorcollege | werkcollege

--- a/topics/1a_inleiding.ipynb
+++ b/topics/1a_inleiding.ipynb
@@ -32,7 +32,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "cc9e2948-306b-4b1a-acdf-d0b9942e1837",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -55,7 +59,7 @@
    "source": [
     "Java is een object georiënteerde programmeertaal.\n",
     "\n",
-    "Een regel tekst op de console printen kan door de **methode** *println* van de klasse van het **object** *System.out* aan te roepen.\n",
+    "Een regel tekst op de console printen kan door de **methode** `println` van de klasse van het **object** *System.out* aan te roepen.\n",
     "\n",
     "Een **methode** is een reeks statements met een naam, die onderdeel is van een **class**. Een methode is vergelijkbaar met een **functie** met als verschil dat een **functie** niet onderdeel is van een **class*.\n",
     "\n",
@@ -72,7 +76,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "94db60e9",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Hello {\n",
@@ -105,12 +113,12 @@
     "## Een aantal kenmerken van Java\n",
     "In het bovenstaande Hello World voorbeeld is een aantal belangrijke kenmerken van Java te zien.\n",
     "\n",
-    "- In Java worden accolades ({ en }) gebruikt om code te groeperen. Bijvoorbeeld een class of een methode. Code tussen accolades vormt een blok. Het komt heel veel voor dat blokken in blokken staan. Zo is in dit voorbeeld de methode *main* onderdeel van de klasse *Hello*\n",
-    "- Statements eindigen met een puntkomma (;)\n",
-    "- Regels die beginnen met // zijn commentaar.\n",
-    "- Java is hoofdletter gevoelig. Er wordt strikt onderscheid gemaakt tussen hoofdletters en kleine letters.\n",
-    "- Namen van klassen beginnen altijd met een hoofdletter.\n",
-    "- Namen van methodes beginnen altijd met een kleine letter."
+    "- In Java worden accolades (`{` en `}`) gebruikt om code te groeperen. Bijvoorbeeld een class of een methode. Code tussen accolades vormt een blok. Het komt heel veel voor dat blokken in blokken staan. Zo is in dit voorbeeld de methode `main` onderdeel van de klasse `Hello`\n",
+    "- Statements eindigen met een puntkomma (`;`)\n",
+    "- Regels die beginnen met `//` zijn commentaar.\n",
+    "- Java is hoofdlettergevoelig. Er wordt strikt onderscheid gemaakt tussen hoofdletters en kleine letters.\n",
+    "- Namen van klassen beginnen altijd met een hoofdletter\n",
+    "- Namen van methodes beginnen altijd met een kleine letter"
    ]
   },
   {
@@ -123,10 +131,7 @@
    "source": [
     "## Programma's compileren\n",
     "\n",
-    "Er wordt onderscheid gemaakt tussen gecompileerde en geïnterpreteerde programmeertalen.\n",
-    "\n",
-    "Een programma van een geïnterpreteerde taal wordt uitgevoerd door een interpreter die code leest en uitvoert.\n",
-    "\n",
+    "In de informatica wordt onderscheid gemaakt tussen gecompileerde en geïnterpreteerde programmeertalen.  Een programma van een geïnterpreteerde taal wordt uitgevoerd door een *interpreter* die de code leest en uitvoert.\n",
     "![interpreter](images/1/interpreter.png)\n",
     "\n",
     "Voorbeelden: Python, PHP, Perl, JavaScript\n",
@@ -135,15 +140,12 @@
     "\n",
     "Voorbeelden: C, Swift, Pascal\n",
     "\n",
-    "Machinecode kan alleen worden uitgevoerd op specifiek hardware.\n",
+    "Machinecode kan alleen worden uitgevoerd op specifiek hardware. Dat betekent dat je voor elke architectuur een programme opnieuw moet compileren (en dikwijls ook moet aanpassen). Om dit probleem te adresseren maakt Java gebruik van een soort tussenstap. In plaats van direct naar machinecode te compileren, wordt een Java-programma gecompileerd naar zogenaamde *Java bytecode*. \n",
     "\n",
-    "Nadeel: Voor elke architectuur moet een programma opnieuw gecompileerd en soms ook aangepast worden.\n",
-    "\n",
-    "Java: Gecompileert naar Java bytecode.\n",
+    "Java bytecode wordt uitgevoerd in een virtuele machine. De Java virtuale machine is een programma dat Java bytecode uitvoert. Een Java programma kan daardoor draaien op alle hardware waarvoor een Java virtuele machine beschikbaar is.\n",
     "\n",
     "![javacompiler](images/1/javacompiler.png)\n",
-    "\n",
-    "Java bytecode wordt uitgevoerd in een virtuele machine. De Java virtuale machine is een programma die Java bytecode uitvoert. Een Java programma kan daardoor draaien op alle hardware waarvoor een Java virtuele machine beschikbaar is."
+    "\n"
    ]
   },
   {
@@ -152,14 +154,19 @@
    "metadata": {},
    "source": [
     "## Code formatteren\n",
-    "Het Hello World voorbeeld ziet er zonder code formattering als volgt uit:"
+    "\n",
+    "In tegenstelling tot Python maakt het inspringen van je code geen verschil voor het werken hiervan. Het Hello World voorbeeld zou je bijvoorbeeld ook als volgt kunnen schrijven:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "id": "3ee603d3",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Hello {\n",
@@ -172,14 +179,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8634344d",
+   "metadata": {},
+   "source": [
+    "Of zelfs op de volgende manier:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9f2300c",
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class Hello { public static void main(String[] args) { System.out.println(\"Hello, World!\"); }   }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2b57232",
+   "metadata": {},
+   "source": [
+    "```{tip}\n",
+    "Om de bovenste versie te laten werken hebben we wel de regel commentaar (`//`) eruit moeten halen, omdat de compiler anders denkt dat de hele regel een commentaarregel is.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aaa23cf4",
    "metadata": {},
    "source": [
-    "Ook deze code compileert!\n",
-    "\n",
-    "De code is echter moeilijk leesbaar.\n",
-    "\n",
-    "Daarom is het formatteren van code gebruikelijk door middel van witregels en <u>inspringen</u>."
+    "Ook deze code compileert, maar is behoorlijk moeilijk leesbaar. Daarom is het formatteren van code gebruikelijk door middel van witregels en *inspringen*. Bekijk [de documentatie op Oracle](https://docs.oracle.com/javase/specs/jls/se20/html/index.html) om te zien hoe dit formatteren in de regel dient te gebeuren."
    ]
   }
  ],
