--- a/topics/1b_variabelen_en_operatoren.ipynb
+++ b/topics/1b_variabelen_en_operatoren.ipynb
@@ -28,6 +28,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9be0f1ce-1d6c-4a38-9e9f-51a1584a2725",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    },
+    "tags": []
+   },
+   "source": [
+    "Variabelen hebben *altijd* een datatype, ongeacht de taal. Een datatype wil zeggen dat je weet wat voor soort waarden er in die variabele gestopt kunnen worden. Wanneer je aangeeft dat een variabele alle *cijfers* kan bevatten, gaat de compiler zeuren wanneer je er een *tekst* in wil opslaan:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "68d0aedf",
    "metadata": {
     "slideshow": {
@@ -38,23 +51,21 @@
    "source": [
     "**Datatypen**\n",
     "\n",
-    "- getallen\n",
-    "- strings (tekst)\n",
-    "- booleans (*true* of *false*)\n",
+    "Er zijn heel veel (letterlijk onbepaald hoeveel) datatypes. Waar je aan kunt denken zijn\n",
+    "\n",
+    "- getallen (`int`)\n",
+    "- karakters (`char`)\n",
+    "- booleans (*waar* of *onwaar*) (`bool`)\n",
+    "- tekst (`String`)\n",
     "- ..."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9be0f1ce-1d6c-4a38-9e9f-51a1584a2725",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    },
-    "tags": []
-   },
+   "id": "7293884a",
+   "metadata": {},
    "source": [
-    "Variabelen hebben altijd een datatype, ongeacht de taal. De wijze van toekenning van waarden aan variabelen, en daarmee de typen, kunnen verschillen. We gaan een onderscheid maken tussen *dynamisch*- en *statisch* getypeerde talen."
+    "De wijze van toekenning van waarden aan variabelen, en daarmee de typen, kunnen verschillen. Je kunt een onderscheid maken tussen *dynamisch* en *statisch* getypeerde talen."
    ]
   },
   {
@@ -67,7 +78,7 @@
     "tags": []
    },
    "source": [
-    "### Dynamisch- en statisch getypeerde talen"
+    "### Dynamisch en statisch getypeerde talen"
    ]
   },
   {
@@ -81,20 +92,8 @@
    },
    "source": [
     "*Dynamisch* getypeerd\n",
-    "> Het type wordt bepaald tijdens uitvoering van een programma aan de hand van de waarde die aan de variabele wordt toegekend, het type kan veranderen door toekenning van andere waarden."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "055083a5-68aa-4688-84bd-b0558ee042e2",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    },
-    "tags": []
-   },
-   "source": [
-    "Voorbeelden van *dynamisch* getypeerde talen zijn Python, PHP en JavaScript."
+    "\n",
+    "> Het type wordt bepaald tijdens de *uitvoer* van een programma aan de hand van de waarde die aan de variabele wordt toegekend; het type kan tijdens die uitvoer veranderen door toekenning van een andere waarde."
    ]
   },
   {
@@ -125,7 +124,20 @@
     "tags": []
    },
    "source": [
-    "Dit is een voorbeeld in Python. Tijdens de loop van het programma (*runtime*) zal `a` eerst verwijzen naar een waarde van type *integer* (`10`), later naar een type *string* (`\"tien\"`)."
+    "Dit is een voorbeeld in Python. Tijdens de loop van het programma (*runtime*) zal `a` eerst verwijzen naar een waarde van type `integer` (`10`), later naar een type `string` (`\"tien\"`)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "055083a5-68aa-4688-84bd-b0558ee042e2",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    },
+    "tags": []
+   },
+   "source": [
+    "Voorbeelden van *dynamisch* getypeerde talen zijn Python, PHP en JavaScript."
    ]
   },
   {
@@ -152,7 +164,7 @@
     "tags": []
    },
    "source": [
-    "Java is een statisch getypeerde programmeertaal waar alle variabelen *vóór* gebruik gedeclareerd moeten  worden. Een ander voorbeeld van een statisch getypeerde taal is C."
+    "Java is een statisch getypeerde programmeertaal waarin alle variabelen *vóór* gebruik gedeclareerd moeten  worden. Andere voorbeelden van statisch getypeerde talen zijn C#, Kotlin of Swift."
    ]
   },
   {
@@ -167,7 +179,7 @@
    "source": [
     "### Variabelen declareren\n",
     "\n",
-    "Het declareren van een variabele vindt plaats met de volgende syntax:\n",
+    "Het declareren van een variabele doe je met de volgende syntax:\n",
     "```text\n",
     "<type> <naam>\n",
     "```"
@@ -181,7 +193,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -201,7 +216,7 @@
     "tags": []
    },
    "source": [
-    "De variabelen hebben hier nog geen waarde, je *verklaart* hier alleen dat je een variabele van een bepaald type gaat gebruiken, de daadwerkelijke waarde zal pas later worden gezet (*geïnitialisereerd*)."
+    "De variabelen hebben hier nog geen waarde; je *verklaart* hier alleen dat je een variabele van een bepaald type gaat gebruiken. De daadwerkelijke waarde zal pas later worden ingevuld (*geïnitialisereerd*)."
    ]
   },
   {
@@ -216,7 +231,7 @@
    "source": [
     "### Variabelen initialiseren\n",
     "\n",
-    "Als een variabele eenmaal is gedeclareerd, dan kan daar een waarde aan worden toegekend."
+    "Als een variabele eenmaal is gedeclareerd, kun je daar een waarde aan toekennen."
    ]
   },
   {
@@ -227,7 +242,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -245,7 +263,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -273,7 +294,7 @@
     "tags": []
    },
    "source": [
-    "Dit geeft een fout. Als het type eenmaal is gedeclareed dan mag geen waarde van een ander type worden toegekend!"
+    "Dit geeft een fout: als het type eenmaal is gedeclareed dan kan daar geen waarde van een ander type aan worden toegekend."
    ]
   },
   {
@@ -290,24 +311,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "7be8b326",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "int score = 12;\n",
-    "String woonplaats = \"Groningen\";\n",
-    "double prijs = 4.95;\n",
-    "boolean isManager = true;"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e4712279-6ded-4f75-8324-f8bd4fe5da5e",
    "metadata": {
@@ -318,6 +321,27 @@
    },
    "source": [
     "Declareren en initialiseren kan in één regel!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "7be8b326",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "int score = 12;\n",
+    "String woonplaats = \"Groningen\";\n",
+    "double prijs = 4.95;\n",
+    "boolean isManager = true;"
    ]
   },
   {
@@ -360,7 +384,7 @@
     "tags": []
    },
    "source": [
-    "Je hebt nu gezien hoe variabelen worden gedeclareerd (met type en naam) en vervolgens worden geinitialiseerd met een waarde van het type dat eerder is gedeclareerd. *Naam*, *type* en *waarde* horen bij elkaar en worden als geheel in het geheugen bewaard. Het type kan niet meer worden gewijzigd en daarmee kan het ook niet meer een waarde van een ander type krijgen."
+    "Je hebt nu gezien hoe variabelen worden *gedeclareerd* (met type en naam) en vervolgens worden *geïnitialiseerd* met een waarde van het type dat eerder is gedeclareerd. *Naam*, *type* en *waarde* horen bij elkaar en worden als geheel in het geheugen bewaard. Het type kan niet meer worden gewijzigd en daarmee kan het ook niet meer een waarde van een ander type krijgen."
    ]
   },
   {
@@ -424,7 +448,7 @@
     "\n",
     "Strikt (technisch) gezien zou je kunnen stellen dat het objecttype niet verandert, alleen maar de verwijzing.\n",
     "\n",
-    "Je kan je misschien nu afvragen welke benadering (statisch of dynamisch) beter is. Ons antwoord is dat het niet een kwestie van beter of slechter is, beide hebben hun voor- en nadelen."
+    "Je kan je misschien nu afvragen welke benadering (statisch of dynamisch) beter is. Ons antwoord is dat het niet een kwestie van beter of slechter is, beide hebben hun voor- en nadelen. Lees [deze fijne blog over statische en dynamische types op Baeldung](https://www.baeldung.com/cs/statically-vs-dynamically-typed-languages) voor meer informatie."
    ]
   },
   {
@@ -448,7 +472,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -477,7 +504,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -505,7 +535,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -531,7 +564,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -571,7 +607,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -613,7 +652,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -649,7 +691,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -698,8 +743,8 @@
     "| Type | Omvang | Bereik |\n",
     "| --- | --- | --- |\n",
     "| byte | 8 bits | -128 t/m 127 |\n",
-    "| short | 16 bits | -32768 t/m 32767 |\n",
-    "| int | 32 bits | -2 147 483 648 t/m 2 147 483 647 |\n",
+    "| short | 16 bits | -32_768 t/m 32_767 |\n",
+    "| int | 32 bits | -2_147_483_648 t/m 2_147_483_647 |\n",
     "| long | 64 bits | -2^63 t/m 2^63-1 |"
    ]
   },
@@ -788,25 +833,12 @@
     "tags": []
    },
    "source": [
-    "Aanduidingen van primitieve types beginnen met een kleine letter.\n",
+    "\n",
+    "De naam van primitieve types begint altijd met een kleine letter beginnen. Aanduidingen van niet-primitieve types beginnen met een hoofdletter. Later zullen we hier uitgebreid op terugkomen. Voor nu is het belangrijk om te weten dat in Java het niet-primitieve type `String` voor strings gebruikt wordt (`String` is dus *geen* primitief type).\n",
     "\n",
     "```java\n",
-    "int score = 12;\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "32bf7d6d-1876-4474-97cc-03b36370c115",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
-    "tags": []
-   },
-   "source": [
-    "```java\n",
-    "String text = \"Hallo wereld!\";\n",
+    "int score = 12; // primitief type, kleine letter\n",
+    "String text = \"Hallo wereld!\"; // klassetype, hoofdletter\n",
     "```"
    ]
   },
@@ -820,9 +852,9 @@
     "tags": []
    },
    "source": [
-    "Maar we hebben eerder ook typen gezien met hoofdletter, bijvoorbeeld `String`. Dit zijn *niet*-primitieve types. Aanduidingen van niet-primitieve types beginnen met een hoofdletter. Deze worden later behandeld.\n",
-    "\n",
-    "Voor nu is het belangrijk om te weten dat het niet-primitieve type `String` voor strings gebruikt wordt in Java."
+    "```{tip}\n",
+    "Feitelijk is een `String` een verzameling van `char`s\n",
+    "```"
    ]
   },
   {
@@ -836,9 +868,7 @@
    },
    "source": [
     "## Rekenkundige operatoren\n",
-    "Op numerieke types kunnen de basis rekenkundige operatoren gebruikt worden.\n",
-    "\n",
-    "Dit zijn onder andere `+`, `-`, `/` en `*`:"
+    "Op numerieke types kunnen de basis rekenkundige operatoren, zoals optellen of vermenigvuldigen, gebruikt worden. Hiervoor gebruik je bijvoorbeeld `+`, `-`, `/` of `*`:"
    ]
   },
   {
@@ -849,7 +879,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -882,9 +915,9 @@
    "source": [
     "Het laatste voorbeeld waarbij `a` gedeeld wordt door `b` geeft wellicht een onverwacht resultaat. Het getal 10 delen door 4 levert immers het getal 2,5 op.\n",
     "\n",
-    "Verklaring: Het type van het resultaat van een operator is gebaseerd op de types waarop de operatie wordt toegepast. In dit voorbeeld: Twee integers worden door elkaar gedeeld. Resultaat komt ook in een integer, als geheel getal.\n",
+    "Verklaring: het type van het resultaat van een operator is gebaseerd op de types waarop de operatie wordt toegepast. In dit voorbeeld worden twee integers door elkaar gedeeld. Het resultaat komt dan ook in een integer,dus als geheel getal.\n",
     "\n",
-    "Oplossing:"
+    "Dit kan natuurlijk voor problemen zorgen. Je kunt ervoor kunnen zorgen dat de teller van de breuk een `float` is, zodat het resultaat ook in een `float` terechtkomt:"
    ]
   },
   {
@@ -895,7 +928,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -920,7 +956,7 @@
     "tags": []
    },
    "source": [
-    "De type-aanduiding *float* tussen haakjes wordt een *cast*-operator genoemd. Het instrueert de compiler om `a` te behandelen alsof het een `float` is. Daardoor wordt het resultaat ook van het type `float`."
+    "De type-aanduiding `float` tussen haakjes wordt een *cast*-operator genoemd. Het instrueert de compiler om `a` te behandelen alsof het een `float` is. Daardoor wordt het resultaat ook van het type `float`."
    ]
   },
   {
@@ -939,7 +975,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -969,6 +1008,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "148b3fa3",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    },
+    "tags": []
+   },
+   "source": [
+    "Bij floatingpoint getallen kun je te maken krijgen met afrondingsfouten, deze afrondingsfouten zijn inherent aan floatingpoint types."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "eba41efd",
@@ -976,7 +1028,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -998,19 +1053,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "148b3fa3",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    },
-    "tags": []
-   },
-   "source": [
-    "Bij floatingpoint getallen kun je te maken krijgen met afrondingsfouten, deze afrondingsfouten zijn inherent aan floatingpoint types!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "20d25507",
    "metadata": {
     "slideshow": {
@@ -1023,7 +1065,7 @@
     "\n",
     "Rekenkundige operatoren zoals aftrekken, delen en vermenigvuldigen zijn niet mogelijk met strings. Deze geven een *compileerfout*.\n",
     "\n",
-    "De `+` operator is wel mogelijk met strings. Deze combineert twee strings tot een nieuwe string."
+    "De `+` operator is wel mogelijk met strings. Deze combineert twee strings tot een nieuwe string (een techniek die bekend staat als *concatenatie* – hier komen we later nog uitgebreid op terug)."
    ]
   },
   {
@@ -1034,7 +1076,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1073,7 +1118,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1112,7 +1160,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1193,7 +1244,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1252,7 +1306,7 @@
     "tags": []
    },
    "source": [
-    "Er zijn 3 types fouten die met het compileren of uitvoeren van een programma kunnen optreden."
+    "Er zijn drie types fouten die met het compileren of uitvoeren van een programma kunnen optreden."
    ]
   },
   {
@@ -1284,7 +1338,7 @@
    "source": [
     "### Runtime fout\n",
     "\n",
-    "Een run-time fout treedt op tijdens het uitvoeren van een programma. Het compileren is in dat geval wel goed verlopen. Bijvoorbeeld delen door nul."
+    "Een runtime fout treedt op tijdens het uitvoeren van een programma. Het compileren is in dat geval wel goed verlopen. Bijvoorbeeld delen door nul: de compiler checkt *alleen* de statische typen, dus in dit geval de twee integers `a` en `b`: die kun je in principe prima op elkaar delen; het gaat pas mis wanneer de noemer (`b`) nul is – een gegeven dat de compiler niet kan checken waardoor het pas runtime ontdekt wordt."
    ]
   },
   {
@@ -1295,7 +1349,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1326,7 +1383,7 @@
    },
    "source": [
     "### Logische fout\n",
-    "Van een logische fout is sprake als code succesvol is gecompileerd en zonder run-time fouten wordt uitgevoerd, maar door een programmeerfout niet het gewenste resultaat geeft.\n",
+    "Van een logische fout is sprake als code succesvol is gecompileerd en zonder runtime fouten wordt uitgevoerd, maar door een programmeerfout niet het gewenste resultaat geeft.\n",
     "\n",
     "Bijvoorbeeld een off-by-one fout:"
    ]
@@ -1339,7 +1396,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -1354,6 +1414,14 @@
     "String naam = \"Hanze\";\n",
     "char derdeLetter = naam.charAt(3);\n",
     "System.out.println(\"De derde letter van \" + naam + \" is \" + derdeLetter);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "813e7c7a",
+   "metadata": {},
+   "source": [
+    "Logische fouten zijn de voorkomendste en de lastigste fouten die je bij het programmeren tegenkomt. Compilers en fouten helpen je met het vinden van de eerste twee foutsoorten, maar logische fouten zijn vaak (altijd?) *denkfouten* – en daar is geen kruid tegen gewassen. Het enige wat je kunt doen om deze fouten in te zien is heel veel programmeeruren maken, zodat je vaak dezelfde denkfouten tegenkomt."
    ]
   }
  ],
