--- a/topics/1c_invoer_en_uitvoer.ipynb
+++ b/topics/1c_invoer_en_uitvoer.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Invoer en uitvoer\n",
     "\n",
-    "Invoer lezen en uitvoer schrijven zijn belangrijke basisoperaties van een programmeertaal. Immers, zonder invoer geen interactie met de gebruiker. En zonder uitvoer geen zichtbaar resultaat."
+    "Invoer lezen en uitvoer schrijven zijn belangrijke basisoperaties van elke programmeertaal. Immers, zonder invoer geen interactie met de gebruiker. En zonder uitvoer geen zichtbaar resultaat."
    ]
   },
   {
@@ -15,21 +15,22 @@
    "id": "c446b7a5",
    "metadata": {},
    "source": [
-    "## Standaard uitvoer\n",
-    "Om naar de standaard uitvoer te schrijven wordt een System.out.println-statement gebruikt.\n",
+    "## Standaarduitvoer\n",
     "\n",
-    "De klasse van het object System.out bevat meerdere methodes\n",
+    "Om naar de standaarduitvoer (meestal de *command line*) te schrijven gebruik je `System.out.println()`. Die methode `println()` (in de klasse `System.out`) print de tekst die je tussen de haakjes zet naar de *command line*.\n",
     "\n",
-    "Twee andere belangrijke methodes zijn *print* en *printf*.\n",
-    "\n",
-    "De methode *print* is identiek aan de methode *println* maar gaat niet naar de volgende regel:"
+    "De klasse `System.out` [bevat meerdere methodes](https://docs.oracle.com/javase/8/docs/api/java/lang/System.html#out). Twee andere belangrijke zijn `print` en `printf`. De eerste van deze twee lijkt op `println`, alleen print deze de tekst *zonder* regeleinde. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2881982b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -49,7 +50,7 @@
    "id": "578592a6",
    "metadata": {},
    "source": [
-    "De methode *printf* is vergelijkbaar met print, maar ondersteunt formattering van tekst."
+    "De methode `printf` is vergelijkbaar met `print``, maar ondersteunt formattering van tekst. Hier komen we later op terug."
    ]
   },
   {
@@ -65,37 +66,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2b25b4bb",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wat is jouw naam? "
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " Simon\n"
+      "Wat is je naam? \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hallo Simon\n"
+      "Hallo Henk\n"
      ]
     }
    ],
    "source": [
     "import java.util.Scanner;\n",
-    "\n",
     "Scanner in = new Scanner(System.in);\n",
-    "System.out.print(\"Wat is jouw naam? \");\n",
+    "System.out.println(\"Wat is je naam? \");\n",
     "String naam = in.nextLine();\n",
     "System.out.println(\"Hallo \" + naam);"
    ]
@@ -110,43 +107,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "90d788ce",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wat is jouw naam? "
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " Simon\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wat is jouw woonplaats? "
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " Groningen\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hallo Simon uit Groningen\n"
+      "Wat is je naam? \n",
+      "Wat is je woonplaats? \n",
+      "Hallo Henk uit Groningen\n"
      ]
     }
    ],
@@ -154,9 +129,9 @@
     "import java.util.Scanner;\n",
     "\n",
     "Scanner in = new Scanner(System.in);\n",
-    "System.out.print(\"Wat is jouw naam? \");\n",
+    "System.out.println(\"Wat is je naam? \");\n",
     "String naam = in.nextLine();\n",
-    "System.out.print(\"Wat is jouw woonplaats? \");\n",
+    "System.out.println(\"Wat is je woonplaats? \");\n",
     "String woonplaats = in.nextLine();\n",
     "System.out.println(\"Hallo \" + naam + \" uit \" + woonplaats);"
    ]
@@ -166,7 +141,7 @@
    "id": "20f15c2b",
    "metadata": {},
    "source": [
-    "Met andere methodes van *Scanner*, zoals *nextInt()*, kunnen ook andere datatypes worden ingelezen."
+    "Met andere methodes van `Scanner`, zoals `nextInt()`, kunnen ook andere datatypes worden ingelezen."
    ]
   },
   {
@@ -175,9 +150,7 @@
    "metadata": {},
    "source": [
     "## Uitvoer formatteren\n",
-    "De waardes van variabelen kunnen gecombineerd worden met tekst met de + operator.\n",
-    "\n",
-    "Een alternatief is het gebruik van tekst formattering.\n",
+    "Zoals we hebben laten zien kunnen de waardes van variabelen gecombineerd worden met de + operator. Een beter alternatief is het gebruik van tekst formattering (`printf()`).\n",
     "\n",
     "Voorbeeld:"
    ]
@@ -187,7 +160,10 @@
    "execution_count": 4,
    "id": "7be98328",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -213,7 +189,7 @@
    "metadata": {},
    "source": [
     "Er zijn vele *format specifiers*.\n",
-    "De belangrijkste zijn: %s staat voor string, %d voor integer, %f voor een floatingpoint.\n",
+    "De belangrijkste zijn: `%s` staat voor string, `%d` voor integer, `%f` voor een floating point.\n",
     "\n",
     "Een voorbeeld met string en integer:"
    ]
@@ -222,7 +198,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "201fec65",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -233,8 +213,8 @@
     }
    ],
    "source": [
-    "int score=180;\n",
-    "String playername=\"The Best\";\n",
+    "int score = 180;\n",
+    "String playername = \"The Best\";\n",
     "System.out.printf(\"Score of player %s is %d\", playername, score);\n",
     "System.out.println();"
    ]
@@ -267,7 +247,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "165f1b92",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -286,7 +270,7 @@
    "id": "f69b54ba",
    "metadata": {},
    "source": [
-    "Een karakter in een string voorafgegaan door een back-slash (\\) wordt een escape-reeks genoemd.\n",
+    "Een karakter in een string voorafgegaan door een backslash (`\\`) wordt een escape-reeks genoemd.\n",
     "\n",
     "Escape-reeksen zijn bedoeld om karakters in een string op te nemen die zonder gebruik van escape reeksen compiler fouten geven of niet mogelijk zijn om in te typen met een toetsenbord.\n",
     "\n",
@@ -305,7 +289,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "ae9f3f76",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -338,7 +326,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "c70c70ff",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -378,7 +370,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "6dd50871",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -388,7 +384,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " Simon\n"
@@ -402,7 +398,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 35\n"
@@ -440,7 +436,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "d74f3a66",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -450,7 +450,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 35\n"
@@ -479,18 +479,22 @@
    "id": "2cb62c80",
    "metadata": {},
    "source": [
-    "In het bovenstaande voorbeeld wordt de naam niet gelezen. Probleem is dat de `nextInt()`; alleen de cijfers leest en niet de return. De aanroep nextLine(); leest de return die eigenlijk bij het getal hoort, zodat er een lege string binnenkomt.\n",
+    "In het bovenstaande voorbeeld wordt de naam niet gelezen. Probleem is dat de methode `nextInt()` alleen de cijfers leest en niet de return. De aanroep `nextLine()` leest de return die eigenlijk bij het getal hoort, zodat er een lege string binnenkomt.\n",
     "\n",
     "Er zijn een aantal mogelijke oplossingen.\n",
     "\n",
-    "Eén daarvan is geen gebruik maken van nextInt maar uitsluitend van nextLine. En waar nodig converteren naar een numeriek datatype:"
+    "Eén daarvan is geen gebruik maken van `nextInt` maar uitsluitend van `nextLine`, en waar nodig converteren naar een numeriek datatype:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "id": "27528d35",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -500,7 +504,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 35\n"
@@ -514,7 +518,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " Simon\n"
@@ -551,7 +555,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "11.0.16+8-post-Ubuntu-0ubuntu122.04"
+   "version": "17.0.5+8-LTS"
   }
  },
  "nbformat": 4,
