Wijzigingen in de weekopgaven
Kleine aanpassingen na met een fijn kammetje door de tekst heengegaan te zijn. Ook heb ik de inhoudsopgave (`_toc.yml`) aangepast zodat alleen de eerste week open staan. Dit kan zo wel online, denk ik.

--- a/topics/1a_inleiding.ipynb
+++ b/topics/1a_inleiding.ipynb
@@ -204,7 +204,7 @@
    "id": "b2b57232",
    "metadata": {},
    "source": [
-    "```{tip}\n",
+    "```{important}\n",
     "Om de bovenste versie te laten werken hebben we wel de regel commentaar (`//`) eruit moeten halen, omdat de compiler anders denkt dat de hele regel een commentaarregel is.\n",
     "```"
    ]
